# odoo-awesome

.github/skills/odoo-migration/: SKILL.md
.github/skills/odoo-migration/references/: user-mapping.md  version-differences.md
.github/skills/self-hosted-cicd/: SKILL.md
containers/odoo-15/: compose.yml
containers/odoo-15/conf/: odoo.conf
containers/odoo-16/: compose.yml
containers/odoo-16/conf/: odoo.conf
containers/odoo-17/: compose.yml
containers/odoo-17/conf/: odoo.conf
containers/odoo-18/: compose.yml
containers/odoo-19/: compose.yml
containers/odoo-19/conf/: odoo.conf
containers/pgadmin/: .env.example  Dockerfile
containers/postgresql/: compose.yml
containers/postgresql/docker/: Dockerfile.16  Dockerfile.17  Dockerfile.18
containers/postgresql/init/: create-odoo-users.sql
docs/.vitepress/: config.ts
mcp/docker_mcp/: pyproject.toml
mcp/docker_mcp/src/: server.py
mcp/odoo-mcp/: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
mcp/pg_mcp/src/: mcp_stdio.py  server.py
mcp/py_mcp/: README.md  test_enhanced.py
mcp/py_mcp/src/: server.py
mcp/py_mcp/tests/: darwin_final_analysis.py  quick_test_summary.py  run_all_tests.py  test_integration_real_world.py  test_new_server.py  test_server_challenges.py
migrate/v15_v19/: .gitignore  README.md
migrate/v15_v19/docs/: index.md  lessons-learned.md  pipeline.md  post-migration-fixes.md
migrate/v15_v19/docs/.vitepress/: config.ts
migrate/v15_v19/migrate/: .gitignore  config-sample.py  migrator.py  run.py
migrate/v15_v19/scripts/: compare_migration.py  compare_modules.py  compare_schemas.py  generate_csv_reports.py  get_modules_v15.py  odoo_db_manager.py  reset_pwd.py  test_login.py
migrate/v15_v19/scripts/checks/: _check_chat_config.py  _check_invoices.py  _check_payments.py  _check_reconcile.py  _check_remaining.py  _check_sml.py  _check_stock_quant.py  _check_v19_stock.py  check_orm.py
migrate/v15_v19/scripts/explore/: explore_hr.py  explore_orders.py  find_duplicate_products.py  merge_duplicate_products.py  research_account_move.py
migrate/v15_v19/scripts/fixes/: fix_audit_fields.py  fix_bank_state.py  fix_bom_kg_to_gram.py  fix_chatter.py  fix_chatter_author.py  fix_invoice_names.py  fix_invoice_names2.py  fix_invoice_salesperson.py  (+9 more)
mpc/docker_mcp/: README.md
mpc/docker_mcp/src/: http_mcp.py  stdio_mcp.py  stdio_mcp_working.py
mpc/pg_mcp/: .gitignore  README.md  pyproject.toml
mpc/pg_mcp/src/: __init__.py
mpc/py_mcp/: config.example.json  pyproject.toml  requirements.txt
mpc/py_mcp/tests/: COMPREHENSIVE_TEST_REPORT.md  test_adversarial_cases.py  test_comprehensive_report.py  test_performance_stress.py
scripts/backup/: pack_odoo_backup.py  restore_db.py
