[project]
name = "docker-mcp-server"
version = "2.0.0"
description = "Docker MCP Server - Chuẩn MCP Protocol cho Docker operations"
authors = [
    {name = "Migration Team"}
]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0"
]
requires-python = ">=3.10"

[project.scripts]
docker-mcp-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "docker_mcp"

# Tool configurations tương tự workspace chính
[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
